k8s-ingress-gateway-setup-v2/app3/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: roboshop
  name: frontend
  labels:
    proj: robohsop
    env: dev
    deployment: k8s
    tier: webservice
spec:
  selector:
    tier: webservice
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: roboshop
  name: frontend
  labels:
    proj: robohsop
    env: dev
    deployment: k8s
    tier: webservice
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: webservice
  template:
    metadata:
    name: frontend
    labels:
      proj: robohsop
      env: dev
      deployment: k8s
      tier: webservice
  spec:
    containers:
      - name: frontend
        image: rakeshakuluru/webservice:3.3.3
        imagePullPolicy: Always
        ports:
          - containerPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: roboshop
  name: aws-tg-httproute
  labels:
    proj: robohsop
    env: dev
    deployment: k8s
    tier: webservice
spec:
  parentRefs:
  - name: aws-lb-gw-listeners # must match the Gateway.metadata.name as specified in Gateway
  hostnames:
    - "app3.rkak87.online"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend # must match the Service.metadata.name as specified above
      port: 80
